aggiunta funzione createChat
