# service/api/api-handler.go
@@ -14,6 +14,8 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.PUT("/user/name", rt.setMyUserName)
 	rt.router.PUT("/user/photo", rt.setMyPhoto)
 	rt.router.GET("/users/:id", rt.getMyUser)
+
+	rt.router.POST("/conversation", rt.createChat)
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
 
